Jos neke CRUD i instaliran Laravel breeze
